# todo-fastapi-project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  todo_lists.db
learning/src.api./: dependencies.py
src/: config.py  database.py  main.py
src/api/: auth.py  dependencies.py  routers.py  tasks.py  todo_lists.py  users.py
src/auth/: config.py  demo_jwt_auth.py  dependencies.py  exceptions.py  schemas.py  utils.py
src/crud/: tasks.py  todo_lists.py  users.py
src/database/: config.py  tabels.py  tables.py
src/database/crud/: auth.py  tasks.py  todo_lists.py  users.py
src/demo_auth/: views.py
src/demo_auth_advanced/: README.md  config.py  demo_jwt_auth.py  utils.py
src/models/: schemas.py  todo_models.py
src/schemas/: todo_schemas.py
tests/api/: conftest.py  test_auth_api.py
tests/unit/: conftest.py  test_auth_unit.py  test_crud_auth.py  test_crud_users.py
